--- a/libraries/asmjit/CMakeLists.txt
+++ b/libraries/asmjit/CMakeLists.txt
@@ -99,7 +99,7 @@ set(ASMJIT_SRCS
 
 add_library(${ASMJITNAME} STATIC ${ASMJIT_SRCS} ${ASMJIT_PUBLIC_HDRS})
 
-set_target_properties(${ASMJITNAME} PROPERTIES OUTPUT_NAME asmjit)
+set_target_properties(${ASMJITNAME} PROPERTIES OUTPUT_NAME asmjit POSITION_INDEPENDENT_CODE ON)
 
 if(NOT SKIP_INSTALL_LIBRARIES AND NOT SKIP_INSTALL_ALL )
     install(TARGETS ${ASMJITNAME}
