--- a/libraries/gdtoa/CMakeLists.txt
+++ b/libraries/gdtoa/CMakeLists.txt
@@ -41,5 +41,4 @@ add_library( gdtoa STATIC
 	dtoa.c
 	misc.c
 	)
-target_link_libraries( gdtoa )
-
+set_target_properties(gdtoa PROPERTIES POSITION_INDEPENDENT_CODE ON)
