add src to gvizdoom_client public include directories

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1199,8 +1199,9 @@ PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/../include/gvizdoom_client
 
 PUBLIC
-	${SDL2_INCLUDE_DIR}
-	${OpenCV_INCLUDE_DIRS} # TODO opencv temp
+    ${SDL2_INCLUDE_DIR}
+    ${OpenCV_INCLUDE_DIRS} # TODO opencv temp
+    ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 target_link_libraries(gvizdoom_client
