CMake: Replace global flags with target-specific flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,12 +117,12 @@ endfunction()
 
 # Macro for building libraries without debugging information
 macro( make_release_only )
-	set( CMAKE_C_FLAGS_MINSIZEREL ${CMAKE_C_FLAGS_RELEASE} )
-	set( CMAKE_C_FLAGS_RELWITHDEBINFO ${CMAKE_C_FLAGS_RELEASE} )
-	string( REPLACE "/MT " "/MTd " CMAKE_C_FLAGS_DEBUG ${CMAKE_C_FLAGS_RELEASE} )
-	set( CMAKE_CXX_FLAGS_MINSIZEREL ${CMAKE_CXX_FLAGS_RELEASE} )
-	set( CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELEASE} )
-	string( REPLACE "/MT " "/MTd " CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_RELEASE} )
+	set( GVIZDOOM_C_FLAGS_MINSIZEREL ${CMAKE_C_FLAGS_RELEASE} )
+	set( GVIZDOOM_C_FLAGS_RELWITHDEBINFO ${CMAKE_C_FLAGS_RELEASE} )
+	string( REPLACE "/MT " "/MTd " GVIZDOOM_C_FLAGS_DEBUG ${GVIZDOOM_C_FLAGS_RELEASE} )
+	set( GVIZDOOM_CXX_FLAGS_MINSIZEREL ${CMAKE_CXX_FLAGS_RELEASE} )
+	set( GVIZDOOM_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELEASE} )
+	string( REPLACE "/MT " "/MTd " GVIZDOOM_CXX_FLAGS_DEBUG ${GVIZDOOM_CXX_FLAGS_RELEASE} )
 endmacro()
 
 IF( NOT CMAKE_BUILD_TYPE )
@@ -211,15 +211,15 @@ if( MSVC )
 	endif()
 	
 	# The CMake configurations set /GR and /MD by default, which conflict with our settings.
-	string(REPLACE "/MD " " " CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE} )
-	string(REPLACE "/MD " " " CMAKE_CXX_FLAGS_MINSIZEREL ${CMAKE_CXX_FLAGS_MINSIZEREL} )
-	string(REPLACE "/MD " " " CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELWITHDEBINFO} )
-	string(REPLACE "/MDd " " " CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} )
-	string(REPLACE "/MD " " " CMAKE_C_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE} )
-	string(REPLACE "/MD " " " CMAKE_C_FLAGS_MINSIZEREL ${CMAKE_C_FLAGS_MINSIZEREL} )
-	string(REPLACE "/MD " " " CMAKE_C_FLAGS_RELWITHDEBINFO ${CMAKE_C_FLAGS_RELWITHDEBINFO} )
-	string(REPLACE "/MDd " " " CMAKE_C_FLAGS_DEBUG ${CMAKE_C_FLAGS_DEBUG} )
-	string(REPLACE " /GR" " " CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} )
+	string(REPLACE "/MD " " " GVIZDOOM_CXX_FLAGS_RELEASE ${GVIZDOOM_CXX_FLAGS_RELEASE} )
+	string(REPLACE "/MD " " " GVIZDOOM_CXX_FLAGS_MINSIZEREL ${GVIZDOOM_CXX_FLAGS_MINSIZEREL} )
+	string(REPLACE "/MD " " " GVIZDOOM_CXX_FLAGS_RELWITHDEBINFO ${GVIZDOOM_CXX_FLAGS_RELWITHDEBINFO} )
+	string(REPLACE "/MDd " " " GVIZDOOM_CXX_FLAGS_DEBUG ${GVIZDOOM_CXX_FLAGS_DEBUG} )
+	string(REPLACE "/MD " " " GVIZDOOM_C_FLAGS_RELEASE ${GVIZDOOM_C_FLAGS_RELEASE} )
+	string(REPLACE "/MD " " " GVIZDOOM_C_FLAGS_MINSIZEREL ${GVIZDOOM_C_FLAGS_MINSIZEREL} )
+	string(REPLACE "/MD " " " GVIZDOOM_C_FLAGS_RELWITHDEBINFO ${GVIZDOOM_C_FLAGS_RELWITHDEBINFO} )
+	string(REPLACE "/MDd " " " GVIZDOOM_C_FLAGS_DEBUG ${GVIZDOOM_C_FLAGS_DEBUG} )
+	string(REPLACE " /GR" " " GVIZDOOM_CXX_FLAGS ${GVIZDOOM_CXX_FLAGS} )
 else()
 	set( REL_LINKER_FLAGS "" )
 	set( ALL_C_FLAGS "-ffp-contract=off" )
@@ -233,7 +233,7 @@ else()
 	
 	if( NOT APPLE )
 		# Generic GCC/Clang requires position independent executable to be enabled explicitly
-		set( ALL_C_FLAGS "${ALL_C_FLAGS} -fPIE" )
+		set( ALL_C_FLAGS "${ALL_C_FLAGS} -fPIC" )
 		set( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pie" )
 	endif()
 endif()
@@ -242,17 +242,17 @@ set( CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} ${REL_LIN
 set( CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "${CMAKE_EXE_LINKER_FLAGS_MINSIZEREL} ${REL_LINKER_FLAGS}" )
 set( CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO} ${REL_LINKER_FLAGS}" )
 
-set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ALL_C_FLAGS}" )
-set( CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${REL_C_FLAGS}" )
-set( CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} ${REL_C_FLAGS}" )
-set( CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} ${REL_C_FLAGS}" )
-set( CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${DEB_C_FLAGS} -D_DEBUG" )
+set( GVIZDOOM_C_FLAGS "${GVIZDOOM_C_FLAGS} ${ALL_C_FLAGS}" )
+set( GVIZDOOM_C_FLAGS_RELEASE "${GVIZDOOM_C_FLAGS_RELEASE} ${REL_C_FLAGS}" )
+set( GVIZDOOM_C_FLAGS_MINSIZEREL "${GVIZDOOM_C_FLAGS_MINSIZEREL} ${REL_C_FLAGS}" )
+set( GVIZDOOM_C_FLAGS_RELWITHDEBINFO "${GVIZDOOM_C_FLAGS_RELWITHDEBINFO} ${REL_C_FLAGS}" )
+set( GVIZDOOM_C_FLAGS_DEBUG "${GVIZDOOM_C_FLAGS_DEBUG} ${DEB_C_FLAGS} -D_DEBUG" )
 
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ALL_C_FLAGS}" )
-set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${REL_C_FLAGS}" )
-set( CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} ${REL_C_FLAGS}" )
-set( CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} ${REL_C_FLAGS}" )
-set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${DEB_C_FLAGS} -D_DEBUG" )
+set( GVIZDOOM_CXX_FLAGS "${GVIZDOOM_CXX_FLAGS} ${ALL_C_FLAGS}" )
+set( GVIZDOOM_CXX_FLAGS_RELEASE "${GVIZDOOM_CXX_FLAGS_RELEASE} ${REL_C_FLAGS}" )
+set( GVIZDOOM_CXX_FLAGS_MINSIZEREL "${GVIZDOOM_CXX_FLAGS_MINSIZEREL} ${REL_C_FLAGS}" )
+set( GVIZDOOM_CXX_FLAGS_RELWITHDEBINFO "${GVIZDOOM_CXX_FLAGS_RELWITHDEBINFO} ${REL_C_FLAGS}" )
+set( GVIZDOOM_CXX_FLAGS_DEBUG "${GVIZDOOM_CXX_FLAGS_DEBUG} ${DEB_C_FLAGS} -D_DEBUG" )
 
 option(FORCE_INTERNAL_ZLIB "Use internal zlib")
 option(FORCE_INTERNAL_JPEG "Use internal jpeg")
