--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -170,8 +170,6 @@ else()
 	# Non-Windows version also needs SDL except native OS X backend
 	if( NOT APPLE OR NOT OSX_COCOA_BACKEND )
 		find_package( SDL2 REQUIRED )
-		include_directories( "${SDL2_INCLUDE_DIRS}" )
-		set( ZDOOM_LIBS ${ZDOOM_LIBS} "${SDL2_LIBRARY}" )
 	endif()
 
 	find_path( FPU_CONTROL_DIR fpu_control.h )
@@ -484,12 +482,7 @@ set( PLAT_POSIX_SOURCES
 	posix/i_steam.cpp )
 set( PLAT_SDL_SOURCES
 	posix/sdl/crashcatcher.c
-	posix/sdl/critsec.cpp
 	posix/sdl/hardware.cpp
-	posix/sdl/i_gui.cpp
-	posix/sdl/i_input.cpp
-	posix/sdl/i_joystick.cpp
-	posix/sdl/i_main.cpp
 	posix/sdl/i_system.cpp
 	posix/sdl/st_start.cpp )
 set( PLAT_UNIX_SOURCES
@@ -502,7 +495,6 @@ set( PLAT_OSX_SOURCES
 set( PLAT_COCOA_SOURCES
 	posix/cocoa/critsec.cpp
 	posix/cocoa/i_input.mm
-	posix/cocoa/i_joystick.cpp
 	posix/cocoa/i_main.mm
 	posix/cocoa/i_main_except.cpp
 	posix/cocoa/i_system.mm
@@ -888,7 +880,6 @@ set (PCH_SOURCES
 	g_statusbar/sbarinfo.cpp
 	g_statusbar/sbar_mugshot.cpp
 	g_statusbar/shared_sbar.cpp
-	menu/joystickmenu.cpp
 	menu/loadsavemenu.cpp
 	menu/menu.cpp
 	menu/menudef.cpp
@@ -1056,13 +1047,7 @@ PRIVATE
 target_link_libraries(gvizdoom
 PUBLIC
 	${ZDOOM_LIBS} gdtoa lzma
-	${SDL2_LIBRARIES} # TODO remove
     Eigen3::Eigen
-)
-
-target_compile_definitions(gvizdoom
-PUBLIC
-	BUILD_GVIZDOOM
 )
 
 target_compile_options(gvizdoom
@@ -1101,7 +1086,7 @@ PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/../include/gvizdoom_client
 
 PUBLIC
-    ${SDL2_INCLUDE_DIR}
+    ${SDL2_INCLUDE_DIRS}
     ${OpenCV_INCLUDE_DIRS} # TODO opencv temp
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
